[package]
name = "sledgehammer"
version = "0.1.0-alpha.1"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = { version = "1.0.40", features = ["span-locations"] }
quote = "1.0.20"
syn = { version = "1.0.98", features = ["full"] }
